--- a/package.json
+++ b/package.json
@@ -39,5 +39,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "yup": "^1.3.2",
+    "zod": "^3.22.4"
   }
 }
